k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskmanager
  labels:
    name: taskmanager
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
